# zynta-studio

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURES.md  README.md  USE_CASES.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
kubernetes/: canary.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: llm.rs  main.rs  network.rs  orchestrator.rs  redact.rs
src-tauri/src/aex/: auction.rs  mod.rs  negotiation.rs
src-tauri/src/agents/: core.rs  debate.rs  memory.rs  mod.rs  protocol.rs  semap.rs
src-tauri/src/ast/: mod.rs
src-tauri/src/commands/: ast.rs  git.rs  health.rs  llm.rs  mcp.rs  mod.rs  provenance.rs  semap.rs  time_travel.rs  tree.rs  ui.rs
src-tauri/src/git/: mod.rs
src-tauri/src/mcp/: auth.rs  client.rs  mod.rs  server.rs  telemetry.rs
src-tauri/src/provenance/: mod.rs
src-tauri/src/redteam/: attacker.rs  benchmarks.rs  defender.rs  mod.rs
src-tauri/src/time_travel/: mod.rs
src-tauri/src/vfs/: engine.rs  idempotency.rs  mod.rs  transaction.rs
src/components/: AgentTerminal.tsx  ArtifactPreview.tsx  EditorArea.tsx  RunnerPanel.tsx  Sidebar.tsx  VisualLogicTree.tsx
src/hooks/: useGenerativeUI.ts
web/: index.html
